src/gen/AngularParser.java
// Generated from C:/Users/DELL/Desktop/compilernew/compiler/src/AngularParser.g4 by
// ANTLR 4.13.1
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class AngularParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WhiteSpace=1, COMMA=2, Component_OPEN=3, APPComponent_OPEN=4, Component_COMMA=5, 
		SELECTOR=6, STANDALONE=7, IMPORT=8, TEMPLATE_OPEN=9, STYLES_OPEN=10, Component_CLOSE=11, 
		OPEN_DIV=12, Template_Close=13, P_app=14, P_list=15, P_card=16, P_card_h=17, 
		P_card_i=18, P_detail=19, P_detail_i=20, STYLES_CLOSE=21, OPEN_NEW_DIV=22, 
		IN_DIV=23, H1=24, H2=25, H3=26, H4=27, H5=28, H6=29, IMG=30, P=31, SPAN=32, 
		STRONG=33, EM=34, I=35, U=36, B=37, SMALL=38, MARK=39, HEADER=40, SECTION=41, 
		ARTICLE=42, ASIDE=43, DETAILS=44, A=45, UL=46, OL=47, LI=48, NAV=49, CLOSE_DIV=50, 
		Array_Product_OPEN=51, SelectedProduct=52, OnProductClick=53, APPComponent_CLOSE=54, 
		Array_COMMA=55, Array_Product_CLOSE=56, Array_element_Open=57, Element_name=58, 
		Element_Array_Close=59, ProductClick_Attribute=60, ProductClick_body=61, 
		ProductClick_Close=62;
	public static final int
		RULE_app = 0, RULE_component = 1, RULE_component_body = 2, RULE_template = 3, 
		RULE_template_body = 4, RULE_div_body = 5, RULE_div = 6, RULE_styles = 7, 
		RULE_styles_body = 8, RULE_appComponent = 9, RULE_appComponent_body = 10, 
		RULE_products = 11, RULE_productElement = 12, RULE_element_Array = 13, 
		RULE_element_body = 14, RULE_click = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"app", "component", "component_body", "template", "template_body", "div_body", 
			"div", "styles", "styles_body", "appComponent", "appComponent_body", 
			"products", "productElement", "element_Array", "element_body", "click"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WhiteSpace", "COMMA", "Component_OPEN", "APPComponent_OPEN", "Component_COMMA", 
			"SELECTOR", "STANDALONE", "IMPORT", "TEMPLATE_OPEN", "STYLES_OPEN", "Component_CLOSE", 
			"OPEN_DIV", "Template_Close", "P_app", "P_list", "P_card", "P_card_h", 
			"P_card_i", "P_detail", "P_detail_i", "STYLES_CLOSE", "OPEN_NEW_DIV", 
			"IN_DIV", "H1", "H2", "H3", "H4", "H5", "H6", "IMG", "P", "SPAN", "STRONG", 
			"EM", "I", "U", "B", "SMALL", "MARK", "HEADER", "SECTION", "ARTICLE", 
			"ASIDE", "DETAILS", "A", "UL", "OL", "LI", "NAV", "CLOSE_DIV", "Array_Product_OPEN", 
			"SelectedProduct", "OnProductClick", "APPComponent_CLOSE", "Array_COMMA", 
			"Array_Product_CLOSE", "Array_element_Open", "Element_name", "Element_Array_Close", 
			"ProductClick_Attribute", "ProductClick_body", "ProductClick_Close"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AppContext extends ParserRuleContext {
		public ComponentContext component() {
			return getRuleContext(ComponentContext.class,0);
		}
		public AppComponentContext appComponent() {
			return getRuleContext(AppComponentContext.class,0);
		}
		public AppContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_app; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterApp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitApp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitApp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AppContext app() throws RecognitionException {
		AppContext _localctx = new AppContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_app);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			component();
			setState(33);
			appComponent();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentContext extends ParserRuleContext {
		public TerminalNode Component_OPEN() { return getToken(AngularParser.Component_OPEN, 0); }
		public Component_bodyContext component_body() {
			return getRuleContext(Component_bodyContext.class,0);
		}
		public TerminalNode Component_CLOSE() { return getToken(AngularParser.Component_CLOSE, 0); }
		public ComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterComponent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitComponent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitComponent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentContext component() throws RecognitionException {
		ComponentContext _localctx = new ComponentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_component);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			match(Component_OPEN);
			setState(36);
			component_body();
			setState(37);
			match(Component_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Component_bodyContext extends ParserRuleContext {
		public List<TerminalNode> SELECTOR() { return getTokens(AngularParser.SELECTOR); }
		public TerminalNode SELECTOR(int i) {
			return getToken(AngularParser.SELECTOR, i);
		}
		public List<TerminalNode> STANDALONE() { return getTokens(AngularParser.STANDALONE); }
		public TerminalNode STANDALONE(int i) {
			return getToken(AngularParser.STANDALONE, i);
		}
		public List<TerminalNode> IMPORT() { return getTokens(AngularParser.IMPORT); }
		public TerminalNode IMPORT(int i) {
			return getToken(AngularParser.IMPORT, i);
		}
		public List<TemplateContext> template() {
			return getRuleContexts(TemplateContext.class);
		}
		public TemplateContext template(int i) {
			return getRuleContext(TemplateContext.class,i);
		}
		public List<StylesContext> styles() {
			return getRuleContexts(StylesContext.class);
		}
		public StylesContext styles(int i) {
			return getRuleContext(StylesContext.class,i);
		}
		public List<TerminalNode> Component_COMMA() { return getTokens(AngularParser.Component_COMMA); }
		public TerminalNode Component_COMMA(int i) {
			return getToken(AngularParser.Component_COMMA, i);
		}
		public Component_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterComponent_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitComponent_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitComponent_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Component_bodyContext component_body() throws RecognitionException {
		Component_bodyContext _localctx = new Component_bodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_component_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SELECTOR:
				{
				setState(39);
				match(SELECTOR);
				}
				break;
			case STANDALONE:
				{
				setState(40);
				match(STANDALONE);
				}
				break;
			case IMPORT:
				{
				setState(41);
				match(IMPORT);
				}
				break;
			case TEMPLATE_OPEN:
				{
				setState(42);
				template();
				}
				break;
			case STYLES_OPEN:
				{
				setState(43);
				styles();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Component_COMMA) {
				{
				{
				setState(46);
				match(Component_COMMA);
				setState(52);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case SELECTOR:
					{
					setState(47);
					match(SELECTOR);
					}
					break;
				case STANDALONE:
					{
					setState(48);
					match(STANDALONE);
					}
					break;
				case IMPORT:
					{
					setState(49);
					match(IMPORT);
					}
					break;
				case TEMPLATE_OPEN:
					{
					setState(50);
					template();
					}
					break;
				case STYLES_OPEN:
					{
					setState(51);
					styles();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemplateContext extends ParserRuleContext {
		public TerminalNode TEMPLATE_OPEN() { return getToken(AngularParser.TEMPLATE_OPEN, 0); }
		public Template_bodyContext template_body() {
			return getRuleContext(Template_bodyContext.class,0);
		}
		public TerminalNode Template_Close() { return getToken(AngularParser.Template_Close, 0); }
		public TemplateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_template; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterTemplate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitTemplate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitTemplate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemplateContext template() throws RecognitionException {
		TemplateContext _localctx = new TemplateContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_template);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(TEMPLATE_OPEN);
			setState(60);
			template_body();
			setState(61);
			match(Template_Close);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Template_bodyContext extends ParserRuleContext {
		public TerminalNode OPEN_DIV() { return getToken(AngularParser.OPEN_DIV, 0); }
		public TerminalNode IN_DIV() { return getToken(AngularParser.IN_DIV, 0); }
		public Div_bodyContext div_body() {
			return getRuleContext(Div_bodyContext.class,0);
		}
		public TerminalNode CLOSE_DIV() { return getToken(AngularParser.CLOSE_DIV, 0); }
		public Template_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_template_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterTemplate_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitTemplate_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitTemplate_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Template_bodyContext template_body() throws RecognitionException {
		Template_bodyContext _localctx = new Template_bodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_template_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(OPEN_DIV);
			setState(64);
			match(IN_DIV);
			setState(65);
			div_body();
			setState(66);
			match(CLOSE_DIV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Div_bodyContext extends ParserRuleContext {
		public List<DivContext> div() {
			return getRuleContexts(DivContext.class);
		}
		public DivContext div(int i) {
			return getRuleContext(DivContext.class,i);
		}
		public List<TerminalNode> HEADER() { return getTokens(AngularParser.HEADER); }
		public TerminalNode HEADER(int i) {
			return getToken(AngularParser.HEADER, i);
		}
		public List<TerminalNode> SECTION() { return getTokens(AngularParser.SECTION); }
		public TerminalNode SECTION(int i) {
			return getToken(AngularParser.SECTION, i);
		}
		public List<TerminalNode> ARTICLE() { return getTokens(AngularParser.ARTICLE); }
		public TerminalNode ARTICLE(int i) {
			return getToken(AngularParser.ARTICLE, i);
		}
		public List<TerminalNode> ASIDE() { return getTokens(AngularParser.ASIDE); }
		public TerminalNode ASIDE(int i) {
			return getToken(AngularParser.ASIDE, i);
		}
		public List<TerminalNode> DETAILS() { return getTokens(AngularParser.DETAILS); }
		public TerminalNode DETAILS(int i) {
			return getToken(AngularParser.DETAILS, i);
		}
		public List<TerminalNode> A() { return getTokens(AngularParser.A); }
		public TerminalNode A(int i) {
			return getToken(AngularParser.A, i);
		}
		public List<TerminalNode> OL() { return getTokens(AngularParser.OL); }
		public TerminalNode OL(int i) {
			return getToken(AngularParser.OL, i);
		}
		public List<TerminalNode> UL() { return getTokens(AngularParser.UL); }
		public TerminalNode UL(int i) {
			return getToken(AngularParser.UL, i);
		}
		public List<TerminalNode> LI() { return getTokens(AngularParser.LI); }
		public TerminalNode LI(int i) {
			return getToken(AngularParser.LI, i);
		}
		public List<TerminalNode> NAV() { return getTokens(AngularParser.NAV); }
		public TerminalNode NAV(int i) {
			return getToken(AngularParser.NAV, i);
		}
		public List<TerminalNode> H1() { return getTokens(AngularParser.H1); }
		public TerminalNode H1(int i) {
			return getToken(AngularParser.H1, i);
		}
		public List<TerminalNode> H2() { return getTokens(AngularParser.H2); }
		public TerminalNode H2(int i) {
			return getToken(AngularParser.H2, i);
		}
		public List<TerminalNode> H3() { return getTokens(AngularParser.H3); }
		public TerminalNode H3(int i) {
			return getToken(AngularParser.H3, i);
		}
		public List<TerminalNode> H4() { return getTokens(AngularParser.H4); }
		public TerminalNode H4(int i) {
			return getToken(AngularParser.H4, i);
		}
		public List<TerminalNode> H5() { return getTokens(AngularParser.H5); }
		public TerminalNode H5(int i) {
			return getToken(AngularParser.H5, i);
		}
		public List<TerminalNode> H6() { return getTokens(AngularParser.H6); }
		public TerminalNode H6(int i) {
			return getToken(AngularParser.H6, i);
		}
		public List<TerminalNode> P() { return getTokens(AngularParser.P); }
		public TerminalNode P(int i) {
			return getToken(AngularParser.P, i);
		}
		public List<TerminalNode> IMG() { return getTokens(AngularParser.IMG); }
		public TerminalNode IMG(int i) {
			return getToken(AngularParser.IMG, i);
		}
		public List<TerminalNode> SPAN() { return getTokens(AngularParser.SPAN); }
		public TerminalNode SPAN(int i) {
			return getToken(AngularParser.SPAN, i);
		}
		public List<TerminalNode> STRONG() { return getTokens(AngularParser.STRONG); }
		public TerminalNode STRONG(int i) {
			return getToken(AngularParser.STRONG, i);
		}
		public List<TerminalNode> I() { return getTokens(AngularParser.I); }
		public TerminalNode I(int i) {
			return getToken(AngularParser.I, i);
		}
		public List<TerminalNode> U() { return getTokens(AngularParser.U); }
		public TerminalNode U(int i) {
			return getToken(AngularParser.U, i);
		}
		public List<TerminalNode> B() { return getTokens(AngularParser.B); }
		public TerminalNode B(int i) {
			return getToken(AngularParser.B, i);
		}
		public List<TerminalNode> SMALL() { return getTokens(AngularParser.SMALL); }
		public TerminalNode SMALL(int i) {
			return getToken(AngularParser.SMALL, i);
		}
		public List<TerminalNode> MARK() { return getTokens(AngularParser.MARK); }
		public TerminalNode MARK(int i) {
			return getToken(AngularParser.MARK, i);
		}
		public List<TerminalNode> EM() { return getTokens(AngularParser.EM); }
		public TerminalNode EM(int i) {
			return getToken(AngularParser.EM, i);
		}
		public Div_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_div_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterDiv_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitDiv_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitDiv_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Div_bodyContext div_body() throws RecognitionException {
		Div_bodyContext _localctx = new Div_bodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_div_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(95);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case OPEN_NEW_DIV:
					{
					setState(68);
					div();
					}
					break;
				case HEADER:
					{
					setState(69);
					match(HEADER);
					}
					break;
				case SECTION:
					{
					setState(70);
					match(SECTION);
					}
					break;
				case ARTICLE:
					{
					setState(71);
					match(ARTICLE);
					}
					break;
				case ASIDE:
					{
					setState(72);
					match(ASIDE);
					}
					break;
				case DETAILS:
					{
					setState(73);
					match(DETAILS);
					}
					break;
				case A:
					{
					setState(74);
					match(A);
					}
					break;
				case OL:
					{
					setState(75);
					match(OL);
					}
					break;
				case UL:
					{
					setState(76);
					match(UL);
					}
					break;
				case LI:
					{
					setState(77);
					match(LI);
					}
					break;
				case NAV:
					{
					setState(78);
					match(NAV);
					}
					break;
				case H1:
					{
					setState(79);
					match(H1);
					}
					break;
				case H2:
					{
					setState(80);
					match(H2);
					}
					break;
				case H3:
					{
					setState(81);
					match(H3);
					}
					break;
				case H4:
					{
					setState(82);
					match(H4);
					}
					break;
				case H5:
					{
					setState(83);
					match(H5);
					}
					break;
				case H6:
					{
					setState(84);
					match(H6);
					}
					break;
				case P:
					{
					setState(85);
					match(P);
					}
					break;
				case IMG:
					{
					setState(86);
					match(IMG);
					}
					break;
				case SPAN:
					{
					setState(87);
					match(SPAN);
					}
					break;
				case STRONG:
					{
					setState(88);
					match(STRONG);
					}
					break;
				case I:
					{
					setState(89);
					match(I);
					}
					break;
				case U:
					{
					setState(90);
					match(U);
					}
					break;
				case B:
					{
					setState(91);
					match(B);
					}
					break;
				case SMALL:
					{
					setState(92);
					match(SMALL);
					}
					break;
				case MARK:
					{
					setState(93);
					match(MARK);
					}
					break;
				case EM:
					{
					setState(94);
					match(EM);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(97); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1125899894259712L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DivContext extends ParserRuleContext {
		public TerminalNode OPEN_NEW_DIV() { return getToken(AngularParser.OPEN_NEW_DIV, 0); }
		public TerminalNode IN_DIV() { return getToken(AngularParser.IN_DIV, 0); }
		public Div_bodyContext div_body() {
			return getRuleContext(Div_bodyContext.class,0);
		}
		public TerminalNode CLOSE_DIV() { return getToken(AngularParser.CLOSE_DIV, 0); }
		public DivContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_div; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterDiv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitDiv(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitDiv(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DivContext div() throws RecognitionException {
		DivContext _localctx = new DivContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_div);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(OPEN_NEW_DIV);
			setState(100);
			match(IN_DIV);
			setState(101);
			div_body();
			setState(102);
			match(CLOSE_DIV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StylesContext extends ParserRuleContext {
		public TerminalNode STYLES_OPEN() { return getToken(AngularParser.STYLES_OPEN, 0); }
		public Styles_bodyContext styles_body() {
			return getRuleContext(Styles_bodyContext.class,0);
		}
		public TerminalNode STYLES_CLOSE() { return getToken(AngularParser.STYLES_CLOSE, 0); }
		public StylesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_styles; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterStyles(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitStyles(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitStyles(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StylesContext styles() throws RecognitionException {
		StylesContext _localctx = new StylesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_styles);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(STYLES_OPEN);
			setState(105);
			styles_body();
			setState(106);
			match(STYLES_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Styles_bodyContext extends ParserRuleContext {
		public List<TerminalNode> P_app() { return getTokens(AngularParser.P_app); }
		public TerminalNode P_app(int i) {
			return getToken(AngularParser.P_app, i);
		}
		public List<TerminalNode> P_list() { return getTokens(AngularParser.P_list); }
		public TerminalNode P_list(int i) {
			return getToken(AngularParser.P_list, i);
		}
		public List<TerminalNode> P_card() { return getTokens(AngularParser.P_card); }
		public TerminalNode P_card(int i) {
			return getToken(AngularParser.P_card, i);
		}
		public List<TerminalNode> P_card_h() { return getTokens(AngularParser.P_card_h); }
		public TerminalNode P_card_h(int i) {
			return getToken(AngularParser.P_card_h, i);
		}
		public List<TerminalNode> P_card_i() { return getTokens(AngularParser.P_card_i); }
		public TerminalNode P_card_i(int i) {
			return getToken(AngularParser.P_card_i, i);
		}
		public List<TerminalNode> P_detail() { return getTokens(AngularParser.P_detail); }
		public TerminalNode P_detail(int i) {
			return getToken(AngularParser.P_detail, i);
		}
		public List<TerminalNode> P_detail_i() { return getTokens(AngularParser.P_detail_i); }
		public TerminalNode P_detail_i(int i) {
			return getToken(AngularParser.P_detail_i, i);
		}
		public Styles_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_styles_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterStyles_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitStyles_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitStyles_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Styles_bodyContext styles_body() throws RecognitionException {
		Styles_bodyContext _localctx = new Styles_bodyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_styles_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(108);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 2080768L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(111); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2080768L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AppComponentContext extends ParserRuleContext {
		public TerminalNode APPComponent_OPEN() { return getToken(AngularParser.APPComponent_OPEN, 0); }
		public AppComponent_bodyContext appComponent_body() {
			return getRuleContext(AppComponent_bodyContext.class,0);
		}
		public TerminalNode APPComponent_CLOSE() { return getToken(AngularParser.APPComponent_CLOSE, 0); }
		public AppComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_appComponent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterAppComponent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitAppComponent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitAppComponent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AppComponentContext appComponent() throws RecognitionException {
		AppComponentContext _localctx = new AppComponentContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_appComponent);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(APPComponent_OPEN);
			setState(114);
			appComponent_body();
			setState(115);
			match(APPComponent_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
